2001-09-02  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: bumped version number to 0.4

	* Changelog: start using the same dating scheme from ogg-python's 
	Changelog

8-30-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/pyvorbisfile.c (py_ov_pcm_seek[_page]) Use the implementation
	  of arg_to_int64 provided by the ogg module

	* test/*.py: updated to use the new ao module's API
	
6-01-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/pyvorbisinfo.c  (py_comment_as_dict): Fixed call with args=NULL
	ogg123.py works now

	* src/*.h src/*.c: Changed to C-style comments

	* test/ogg123.py: Removed stupid print statement

5-14-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: Bumped to version 0.3

	* src/general.[ch]: Removed arg_to_64 and use ogg-python's arg_to_int64

	* src/general.h: Fixed preprocessor warnings

	* src/py*.c: Methods which take no arguments now require no arguments
	Made functions match Python-expected signatures

	* test/short.py: Fixed to match new Python ao module. I think I broke
	something, so test/ogg123.py doesn't work at the moment
	
1-17-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* All was essentially created, since this is the first separation
	of pyvorbis and pyogg
	
11-29-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* test/ogg123.py: Added support for linuxaudiodev. Factored parts
	of Player class into a superclass and made separate AOPlayer and
	LADPlayer subclasses.

	* test/short.py: added
	
11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/_oggmodule.c (init_ogg): Stuff PyOgg_Error into a
	Py_CObject.
	* src/vorbismodule.c (initvorbis): Get PyOgg_Error back out to
	inherit from.
	* test/ogg123.py: Change to use new module arrangement.

11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: Changed leftover MySQLdb reference.
	Went back to having a separate _oggmodule and vorismodule.

	* oggmodule.[ch]: Moved to _oggmodule.[ch]
